test/message/vm_display_syntax_error.out
beginning
foo.vm:1
var 4;
    ^
SyntaxError: Unexpected number
    at new Script (node:vm:*)
    at createScript (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_syntax_error.js:*)
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Module._load (node:internal/modules/cjs/loader:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*)
    at node:internal/main/run_main_module:*:*
test.vm:1
var 5;
    ^
SyntaxError: Unexpected number
    at new Script (node:vm:*)
    at createScript (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_syntax_error.js:*)
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Module._load (node:internal/modules/cjs/loader:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*)
    at node:internal/main/run_main_module:*:*

Node.js *
